--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -24,7 +24,7 @@ target = "thumbv6m-none-eabi"
 
 [env]
 DEFMT_LOG = "info"
-CHIPSERIE = "stm32f030"
+CHIPSERIE = "STM32F0x0"
 
 
 [profile.release]
