--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "rust-analyzer.check.allTargets": false,
   "rust-analyzer.check.targets": "thumbv6m-none-eabi",
+  "rust-analyzer.restartServerOnConfigChange": true,
 }
