--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 
 [dependencies]
 cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
-cortex-m-rt = "0.7"
-
+cortex-m-rt ={ version = "0.7", features = ["device"] }
+nb = "1.0.0"
 panic-probe = { version = "0.3.1", features = ["defmt"] }
 
 
