--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,30 +1,34 @@
 [package]
-name = "blink"
+name = "embassy-stm32f0-examples"
 version = "0.1.0"
-authors = ["Dominik Völkel <voelkel.dominik@gmail.com>"]
 edition = "2021"
+license = "MIT OR Apache-2.0"
+
 
 [dependencies]
-cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
-cortex-m-rt ={ version = "0.7", features = ["device"] }
-nb = "1.0.0"
-panic-probe = { version = "0.3.1", features = ["defmt"] }
-
-
+cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
+cortex-m-rt = "0.7.0"
+defmt = "0.3"
 defmt-rtt = "0.4"
-defmt = "0.3.5"
+panic-probe = { version = "0.3", features = ["print-defmt"] }
+embassy-stm32 = { version = "0.1.0", features = [ "defmt", "memory-x", "stm32f091rc", "time-driver-tim3", "exti", "unstable-pac"] }
+embassy-sync = { version = "0.6.1", features = ["defmt"] }
+embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
+embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
+static_cell = "2"
+portable-atomic = { version = "1.5", features = ["unsafe-assume-single-core"] }
 
-[dependencies.stm32f0xx-hal]
-version = "0.18.0"
-features = ["stm32f030x6", ]
-
-# Set the default for dependencies.
-[profile.dev.package."*"]
-opt-level = "s"
+[patch.crates-io]
+# Unfortunately embassy-stm32 hasn't had proper releases for a while,
+# therefore update to a somewhat newer version to handle API changes
+# between 0.1.0 -> 0.2.0
+embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "06869e2e85695f4528d1148dfd81700c905771c5" }
+embassy-sync= { git = "https://github.com/embassy-rs/embassy.git", rev = "06869e2e85695f4528d1148dfd81700c905771c5" }
+embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "06869e2e85695f4528d1148dfd81700c905771c5" }
+embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "06869e2e85695f4528d1148dfd81700c905771c5" }
 
 [profile.release]
-codegen-units = 1
-incremental = false
-debug = true
-lto = true
+debug = 2
+
+[profile.dev]
 opt-level = "s"
