basically working or ms signals

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,6 +2,11 @@
 runner = "probe-rs run --chip STM32F030F4Px"
 
 [build]
+rustflags = [
+    "-C", "link-arg=--nmagic",
+    "-C", "link-arg=-Tlink.x",
+    "-C", "link-arg=-Tdefmt.x",
+]
 target = "thumbv6m-none-eabi"
 
 [env]
@@ -12,5 +17,6 @@ debug = 2
 lto = true      # Link-time-optimizations for further size reduction
 
 [profile.dev]
-opt-level = "s"
+opt-level = "z"
 debug = 2
+lto = true      # Link-time-optimizations for further size reduction
